remove top right nav button

--- a/_overrides/partials/footer.html
+++ b/_overrides/partials/footer.html
@@ -45,7 +45,7 @@
     {% endif %}
     {% endif %}
 
-    {% include "partials/sub-footer.html" %}
+    <!-- {% include "partials/sub-footer.html" %} -->
 
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
