disable more links

--- a/_overrides/partials/footer.html
+++ b/_overrides/partials/footer.html
@@ -49,13 +49,16 @@
 
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
+
             <!-- n8n CUSTOM: More links to the main website -->
-            <div class="n8n-footer-links">
+            <!-- <div class="n8n-footer-links">
                 <a href="https://n8n.io/pricing/" target="_blank">Pricing ↗</a>
                 <a href="https://n8n.io/workflows/" target="_blank">Workflow templates ↗</a>
                 <a href="https://n8n.io/features/" target="_blank">Feature highlights ↗</a>
                 <a href="https://n8n.io/ai/" target="_blank">AI highlights ↗</a>
-            </div>
+            </div> -->
+
+
             {% include "partials/copyright.html" %}
             {% if config.extra.social %}
             {% include "partials/social.html" %}
